--- a/app/css/sprite.css
+++ b/app/css/sprite.css
@@ -16,9 +16,15 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
-.icon-xls-icon {
-  background-image: url(sprite.png);
+.icon-phone-icon {
+  background-image: url(../img/sprite.png);
   background-position: 0px 0px;
+  width: 21px;
+  height: 21px;
+}
+.icon-xls-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -21px 0px;
   width: 21px;
   height: 21px;
 }
