--- a/app/css/style.css
+++ b/app/css/style.css
@@ -62,17 +62,17 @@ table {
 }
 .btn {
 	font-size: 14px;
+	-webkit-border-radius: 10px;
+	        border-radius: 10px;
 	font-family: "Museo Sans Cyrl 700";
 	text-transform: uppercase;
 }
 .btn-orange {
-	background: -webkit-gradient(linear, right top, left top, from(#e79f00), to(#ffbb79));
-	background: -webkit-linear-gradient(right, #e79f00, #ffbb79);
-	background: -o-linear-gradient(right, #e79f00, #ffbb79);
-	background: linear-gradient(to left, #e79f00, #ffbb79);
-	color: #ffffff;
-	-webkit-box-shadow: 0 0 20px rgba(255,187,121,.5);
-	        box-shadow: 0 0 20px rgba(255,187,121,.5);
+	background: -webkit-linear-gradient(135deg, #fbac00 0%, #ffb267 100%);
+	background: -o-linear-gradient(135deg, #fbac00 0%, #ffb267 100%);
+	background: linear-gradient(-45deg, #fbac00 0%, #ffb267 100%);
+	-webkit-box-shadow: 0 0 10px rgba(206, 95, 6, 0.3);
+	        box-shadow: 0 0 10px rgba(206, 95, 6, 0.3);
 }
 
 .flex-block {
@@ -108,9 +108,13 @@ table {
 	font-size: 13px;
 	font-weight: 300;
 }
-.phone-number {
-	font-size: 26px;
+.phone-number a{
+	color: #222225;
 	font-family: "Museo Sans Cyrl 700";
+	font-size: 26px;
+	text-transform: uppercase;
+	text-decoration: none;
+	margin-left: 11px;
 }
 .text-upper {
 	text-transform: uppercase;
@@ -124,8 +128,8 @@ table {
 .header-top {
 	padding: 20px 0 15px 0;
 	background-color: #fff;
-	-webkit-box-shadow: 0 0 15px rgba(0,0,0,0.1);
-	        box-shadow: 0 0 15px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
 .header-top__block {
 	-webkit-box-pack: justify;
@@ -140,9 +144,11 @@ table {
 .header-top__prices a {
 	margin-left: 12px;
 	color: inherit;
+	text-decoration: none;
 }
-.header-top__prices a:hover {
+.header-top__prices:hover a span {
 	color: #14662d;
+	text-decoration: underline;
 }
 .header-top__text {
 	margin-left: 45px;
@@ -186,6 +192,90 @@ table {
 .header-middle__button {
 	margin-left: 20px;
 }
+.header-middle__email a {
+	color: #14662d;
+}
+.header-bottom {
+	background-color: #eeeeee;
+}
+nav.header-nav ul {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+.header-nav a {
+	display: inline-block;
+	color: #222225;
+	font-family: "Museo Sans Cyrl 500";
+	font-size: 12px;
+	line-height: 24px;
+	padding: 11px 24px;
+	white-space: nowrap;
+	border-top: 6px solid transparent;
+	text-decoration: none;
+}
+.header-nav a:hover {
+	color: #14662d;
+	font-family: "Museo Sans Cyrl 900";
+	border-top: 6px solid #54bb4c;
+}
 /*header styles end*/
+
+/*main banner styles start*/
+.main-banner {
+    height: 520px;
+	background: url(../img/main-banner-img.png) no-repeat;
+	-webkit-background-size: 100% auto;
+	        background-size: 100% auto;
+	background-position-y: 90%;
+	-webkit-clip-path: ellipse(125% 100% at 51% 0px);
+	        clip-path: ellipse(125% 100% at 51% 0px);
+}
+.main-banner__title span {
+	color: #ffffff;
+	display: inline-block;
+	font-family: "Museo999 Sans Cyrl 900";
+	font-size: 36px;
+	padding-left: 15px;
+	border-left: 12px solid #ffffff;
+}
+.main-banner__info {
+	position: relative;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+}
+.main-banner__img {
+    width: 221px;
+    height: 148px;
+    -webkit-border-top-left-radius: 64px;
+            border-top-left-radius: 64px;
+    overflow: hidden;
+	position: absolute;
+	z-index: 1;
+}
+.main-banner__img img {
+    width: 120%;
+    margin-left: -13%;
+}
+.main-banner__text {
+    -webkit-border-radius: 50px 50px 0 0;
+            border-radius: 50px 50px 0 0;
+    background-color: #171403;
+    opacity: 0.9;
+    width: 100%;
+	padding: 40px 20px 40px 275px;
+}
+/*main banner styles end*/
 
 /* MAIN STYLES END */
