--- a/src/css/sprite.css
+++ b/src/css/sprite.css
@@ -16,15 +16,129 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
+.icon-box-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -224px 0px;
+  width: 79px;
+  height: 86px;
+}
+.icon-checked-green-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -224px -128px;
+  width: 40px;
+  height: 40px;
+}
+.icon-chemical-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -131px -114px;
+  width: 23px;
+  height: 23px;
+}
+.icon-correct-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -155px -90px;
+  width: 27px;
+  height: 21px;
+}
+.icon-divide-tool-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -264px -128px;
+  width: 24px;
+  height: 24px;
+}
+.icon-factory-icon {
+  background-image: url(../img/sprite.png);
+  background-position: 0px -80px;
+  width: 99px;
+  height: 90px;
+}
+.icon-lawn-mover-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -182px -90px;
+  width: 26px;
+  height: 20px;
+}
+.icon-like-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -131px -90px;
+  width: 24px;
+  height: 24px;
+}
+.icon-lock-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -164px -137px;
+  width: 12px;
+  height: 15px;
+}
+.icon-man-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -208px -90px;
+  width: 13px;
+  height: 18px;
+}
+.icon-newspaper-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -224px -86px;
+  width: 56px;
+  height: 42px;
+}
 .icon-phone-icon {
   background-image: url(../img/sprite.png);
-  background-position: 0px 0px;
+  background-position: -175px -114px;
   width: 21px;
   height: 21px;
 }
+.icon-plus-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -149px -137px;
+  width: 15px;
+  height: 15px;
+}
+.icon-ribbon-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -264px -152px;
+  width: 30px;
+  height: 13px;
+}
+.icon-shopping-cart-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -131px -137px;
+  width: 18px;
+  height: 18px;
+}
+.icon-snow-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -131px 0px;
+  width: 93px;
+  height: 90px;
+}
+.icon-stack-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -288px -128px;
+  width: 14px;
+  height: 18px;
+}
+.icon-term-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -280px -86px;
+  width: 21px;
+  height: 32px;
+}
+.icon-track-icon {
+  background-image: url(../img/sprite.png);
+  background-position: 0px 0px;
+  width: 131px;
+  height: 80px;
+}
+.icon-transfer-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -154px -114px;
+  width: 21px;
+  height: 23px;
+}
 .icon-xls-icon {
   background-image: url(../img/sprite.png);
-  background-position: -21px 0px;
+  background-position: -196px -114px;
   width: 21px;
   height: 21px;
 }
