--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,13 +62,13 @@ table {
 }
 .btn {
 	font-size: 14px;
+	border-radius: 10px;
 	font-family: "Museo Sans Cyrl 700";
 	text-transform: uppercase;
 }
 .btn-orange {
-	background: linear-gradient(to left, #e79f00, #ffbb79);
-	color: #ffffff;
-	box-shadow: 0 0 20px rgba(255,187,121,.5);
+	background: linear-gradient(-45deg, #fbac00 0%, #ffb267 100%);
+	box-shadow: 0 0 10px rgba(206, 95, 6, 0.3);
 }
 
 .flex-block {
@@ -92,9 +92,13 @@ table {
 	font-size: 13px;
 	font-weight: 300;
 }
-.phone-number {
-	font-size: 26px;
+.phone-number a{
+	color: #222225;
 	font-family: "Museo Sans Cyrl 700";
+	font-size: 26px;
+	text-transform: uppercase;
+	text-decoration: none;
+	margin-left: 11px;
 }
 .text-upper {
 	text-transform: uppercase;
@@ -108,7 +112,7 @@ table {
 .header-top {
 	padding: 20px 0 15px 0;
 	background-color: #fff;
-	box-shadow: 0 0 15px rgba(0,0,0,0.1);
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
 .header-top__block {
 	justify-content: space-between;
@@ -120,9 +124,11 @@ table {
 .header-top__prices a {
 	margin-left: 12px;
 	color: inherit;
+	text-decoration: none;
 }
-.header-top__prices a:hover {
+.header-top__prices:hover a span {
 	color: #14662d;
+	text-decoration: underline;
 }
 .header-top__text {
 	margin-left: 45px;
@@ -149,6 +155,74 @@ table {
 .header-middle__button {
 	margin-left: 20px;
 }
+.header-middle__email a {
+	color: #14662d;
+}
+.header-bottom {
+	background-color: #eeeeee;
+}
+nav.header-nav ul {
+	display: flex;
+	justify-content: space-between;
+}
+.header-nav a {
+	display: inline-block;
+	color: #222225;
+	font-family: "Museo Sans Cyrl 500";
+	font-size: 12px;
+	line-height: 24px;
+	padding: 11px 24px;
+	white-space: nowrap;
+	border-top: 6px solid transparent;
+	text-decoration: none;
+}
+.header-nav a:hover {
+	color: #14662d;
+	font-family: "Museo Sans Cyrl 900";
+	border-top: 6px solid #54bb4c;
+}
 /*header styles end*/
+
+/*main banner styles start*/
+.main-banner {
+    height: 520px;
+	background: url(../img/main-banner-img.png) no-repeat;
+	background-size: 100% auto;
+	background-position-y: 90%;
+	clip-path: ellipse(125% 100% at 51% 0px);
+}
+.main-banner__title span {
+	color: #ffffff;
+	display: inline-block;
+	font-family: "Museo999 Sans Cyrl 900";
+	font-size: 36px;
+	padding-left: 15px;
+	border-left: 12px solid #ffffff;
+}
+.main-banner__info {
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+.main-banner__img {
+    width: 221px;
+    height: 148px;
+    border-top-left-radius: 64px;
+    overflow: hidden;
+	position: absolute;
+	z-index: 1;
+}
+.main-banner__img img {
+    width: 120%;
+    margin-left: -13%;
+}
+.main-banner__text {
+    border-radius: 50px 50px 0 0;
+    background-color: #171403;
+    opacity: 0.9;
+    width: 100%;
+	padding: 40px 20px 40px 275px;
+}
+/*main banner styles end*/
 
 /* MAIN STYLES END */
