--- a/app/css/sprite.css
+++ b/app/css/sprite.css
@@ -64,9 +64,15 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 24px;
   height: 24px;
 }
+.icon-location-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -131px -137px;
+  width: 16px;
+  height: 22px;
+}
 .icon-lock-icon {
   background-image: url(../img/sprite.png);
-  background-position: -164px -137px;
+  background-position: -195px -137px;
   width: 12px;
   height: 15px;
 }
@@ -84,13 +90,19 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-phone-icon {
   background-image: url(../img/sprite.png);
-  background-position: -175px -114px;
-  width: 21px;
-  height: 21px;
+  background-position: -165px -137px;
+  width: 15px;
+  height: 15px;
+}
+.icon-phone-orange-icon {
+  background-image: url(../img/sprite.png);
+  background-position: -196px -114px;
+  width: 19px;
+  height: 19px;
 }
 .icon-plus-icon {
   background-image: url(../img/sprite.png);
-  background-position: -149px -137px;
+  background-position: -180px -137px;
   width: 15px;
   height: 15px;
 }
@@ -102,7 +114,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-shopping-cart-icon {
   background-image: url(../img/sprite.png);
-  background-position: -131px -137px;
+  background-position: -147px -137px;
   width: 18px;
   height: 18px;
 }
@@ -138,7 +150,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-xls-icon {
   background-image: url(../img/sprite.png);
-  background-position: -196px -114px;
+  background-position: -175px -114px;
   width: 21px;
   height: 21px;
 }
