--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,6 +57,9 @@ table {
 .text-green {
 	color: #14662d;
 }
+.text-orange {
+	color: #ffd800;
+}
 .icon {
 	display: inline-block;
 }
@@ -65,12 +68,35 @@ table {
 	border-radius: 10px;
 	font-family: "Museo Sans Cyrl 700";
 	text-transform: uppercase;
+	padding: 13px 0;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(206, 95, 6, 0.3);
+}
+.btn:active,
+.btn:focus {
+	outline: none;
+}
+.btn-big {
+	font-size: 19px;
+	padding: 17px 0;
 }
 .btn-orange {
-	background: linear-gradient(-45deg, #fbac00 0%, #ffb267 100%);
-	box-shadow: 0 0 10px rgba(206, 95, 6, 0.3);
+	color: #ffffff;
+	background: linear-gradient(-45deg, #fbac00 0%, #ffb267 100%);	
 }
-
+.btn-orange:hover {
+	background: #ffffff;
+	color: #ffaf00;
+}
+.btn-white {
+	color: #ffaf00;
+	border: 3px solid #fcae27;
+	background-color: #ffffff;
+}
+.btn-white:hover {
+	color: #ffffff;
+	background-color: #ffaf00;
+}
 .flex-block {
 	display: flex;
 }
@@ -102,6 +128,45 @@ table {
 }
 .text-upper {
 	text-transform: uppercase;
+}
+.text-title {
+	display: inline-block;
+	color: #000000;
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 16px;
+	margin-bottom: 13px;
+}
+.text-paragraph {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 300";
+	font-size: 14px;
+}
+.block-title {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.block-title__text {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 900";
+	font-size: 24px;
+	text-transform: uppercase;
+	margin-top: 127px;
+}
+.block-title__stripe-green {
+	width: 71px;
+	height: 8px;
+	background-color: #14662d;
+	margin-top: 18px;
+	margin-bottom: 77px;
+}
+.block-title__stripe-yellow {
+	width: 71px;
+	height: 8px;
+	background-color: #f2c149;
+	margin-top: 18px;
+	margin-bottom: 77px;
 }
 /* CUSTOM STYLES END */
 
@@ -154,6 +219,7 @@ table {
 }
 .header-middle__button {
 	margin-left: 20px;
+	width: 178px;
 }
 .header-middle__email a {
 	color: #14662d;
@@ -185,16 +251,20 @@ nav.header-nav ul {
 
 /*main banner styles start*/
 .main-banner {
-    height: 520px;
+    padding: 107px 0;
 	background: url(../img/main-banner-img.png) no-repeat;
 	background-size: 100% auto;
 	background-position-y: 90%;
 	clip-path: ellipse(125% 100% at 51% 0px);
 }
+.main-banner .row {
+    display: flex;
+    align-items: center;
+}
 .main-banner__title span {
 	color: #ffffff;
 	display: inline-block;
-	font-family: "Museo999 Sans Cyrl 900";
+	font-family: "Museo Sans Cyrl 900";
 	font-size: 36px;
 	padding-left: 15px;
 	border-left: 12px solid #ffffff;
@@ -203,6 +273,7 @@ nav.header-nav ul {
 	position: relative;
 	display: flex;
 	align-items: center;
+	margin-top: 85px;
 }
 .main-banner__img {
     width: 221px;
@@ -221,8 +292,113 @@ nav.header-nav ul {
     background-color: #171403;
     opacity: 0.9;
     width: 100%;
-	padding: 40px 20px 40px 275px;
+	padding: 30px 5px 20px 270px;
+}
+.main-banner__text-bottom {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 500";
+	font-size: 16px;
+	margin-top: 15px;
+}
+.main-banner__text-bottom span.text-orange {
+	color: #ffd800;
+	font-family: "Museo Sans Cyrl 900";
+	line-height: 20px;
+}
+.main-banner__offer {
+	font-family: "Museo Sans Cyrl 900";
+	font-size: 26px;
+	line-height: 20px;
+}
+.main-banner__form {
+	border: 5px solid #d5d5d5;
+	background-color: #ffffff;
+	position: relative;
+	padding: 30px;
+    padding-top: 45px;
+}
+.main-banner__form-img {
+	width: 90px;
+	height: 90px;
+	position: absolute;
+	top: -45px;
+    left: -45px;
+	background: url(../img/journal.png) no-repeat;
+	background-size: 100%;
+}
+.main-banner__form-title {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 500";
+	font-size: 13px;
+	line-height: 20px;
+	text-transform: uppercase;
+}
+.main-banner__form-title .text-orange {
+	font-family: "Museo Sans Cyrl 900";
+}
+.main-banner__form form {
+	width: 100%;
+    margin-top: 21px;
+}
+.main-banner__form .form-group {
+	position: relative;
+}
+.main-banner__form input{
+	margin-top: 7px;
+	height: 48px;
+	width: 100%;
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.09);
+	border: 1px solid rgba(213, 213, 213, 0.77);
+	background-color: #f4f4f4;
+	padding-left: 47px;
+}
+.main-banner__form input::placeholder{
+	color: #9d9d9d;
+	font-family: "Museo Sans Cyrl 500";
+	font-size: 13px;
+	line-height: 20px;
+}
+.main-banner__form label{
+	position: absolute;
+    top: 23px;
+    left: 18px;
+}
+.main-banner__form .btn{
+	margin-top: 14px;
 }
 /*main banner styles end*/
+
+/*how to block styles start*/
+.how-to {
+	margin-top: 43px;
+}
+.how-to__block {
+	display: flex;
+    align-items: center;
+}
+.how-to__left {
+    display: flex;
+    justify-content: space-between;
+}
+.how-to__text {
+    width: 88%;
+}
+/*how to block styles end*/
+
+/*why us block styles start*/
+.why-us .flex-block {
+	align-items: flex-end;
+}
+.why-us__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
+}
+.why-us__img {
+    margin-bottom: 31px;
+}
+/*why us block styles end*/
 
 /* MAIN STYLES END */
