--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,6 +63,17 @@ table {
 .icon {
 	display: inline-block;
 }
+.icon-round {
+	min-width: 57px;
+	min-height: 57px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 3px solid #14662d;
+	border-radius: 30px; 
+	background-color: #ffffff;
+	margin: 0 13px;
+}
 .btn {
 	font-size: 14px;
 	border-radius: 10px;
@@ -87,6 +98,15 @@ table {
 .btn-orange:hover {
 	background: #ffffff;
 	color: #ffaf00;
+}
+.btn-green {
+	border: 3px solid #33cc33;
+	background-color: #ffffff;
+	color: #14662d;
+}
+.btn-green:hover {
+	background-color: #14662d;
+	color: #ffffff;
 }
 .btn-white {
 	color: #ffaf00;
@@ -146,27 +166,25 @@ table {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	margin: 77px 0;
 }
 .block-title__text {
 	color: #000000;
 	font-family: "Museo Sans Cyrl 900";
 	font-size: 24px;
 	text-transform: uppercase;
-	margin-top: 127px;
 }
 .block-title__stripe-green {
 	width: 71px;
 	height: 8px;
 	background-color: #14662d;
 	margin-top: 18px;
-	margin-bottom: 77px;
 }
 .block-title__stripe-yellow {
 	width: 71px;
 	height: 8px;
 	background-color: #f2c149;
 	margin-top: 18px;
-	margin-bottom: 77px;
 }
 /* CUSTOM STYLES END */
 
@@ -332,6 +350,7 @@ nav.header-nav ul {
 	font-size: 13px;
 	line-height: 20px;
 	text-transform: uppercase;
+	text-align: center;
 }
 .main-banner__form-title .text-orange {
 	font-family: "Museo Sans Cyrl 900";
@@ -369,8 +388,9 @@ nav.header-nav ul {
 /*main banner styles end*/
 
 /*how to block styles start*/
-.how-to {
-	margin-top: 43px;
+.how-to .container {
+    padding: 43px 0;
+    border-bottom: 1px solid hsla(0,0%,84%,.77);
 }
 .how-to__block {
 	display: flex;
@@ -401,4 +421,563 @@ nav.header-nav ul {
 }
 /*why us block styles end*/
 
+/*stripe 1 block styles start*/
+.stripe-1 {
+	color: #ffffff;
+	background: url(../img/stripe-1.png) 0 -450px no-repeat;
+	margin-top: 77px;
+}
+.stripe__background {
+	background-color: rgba(0,0,0,.5);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+    left: 0;
+    top: 0;
+}
+.stripe-1__block {
+	display: flex;
+	align-items: center;
+}
+.stripe-1__number {
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 58px;
+	line-height: 75%;
+    margin: 36px 0;
+    padding-right: 14px;
+    border-right: 6px solid #f7d968;
+    margin-right: 11px;
+}
+/*stripe 1 block styles end*/
+
+/*advantages block styles start*/
+.advantages {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+}
+.advantages .flex-block {
+	padding-bottom: 127px;
+}
+.stripe__background-white {
+	background: url(../img/transparent-1.png) no-repeat;
+    background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+    left: 0;
+    top: 0;
+}
+.advantages__block {
+	display: flex;
+	align-items: center;
+}
+.advantages-block__img {
+    width: 422px;
+    height: 422px;
+    background: url(../img/bordur.png) -50px -20px no-repeat;
+    background-size: 119% 107%;
+    border-radius: 211px;
+    position: absolute;
+}
+.advantages-block__img-man {
+	width: 176px;
+	height: 442px;
+    background: url(../img/man.png) no-repeat;
+    background-size: contain;
+    position: absolute;
+	right: -25px;
+    bottom: -115px;
+}
+.right .advantages__block p {
+    margin-left: 10%;
+}
+
+.advantages__block p {
+    max-width: 70%;
+}
+.advantages-block__grass {
+	width: 100%;
+	height: 80px;
+    background: url(../img/grass.png) no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    bottom: 0;
+}
+.advantages__block + .advantages__block {
+	margin-top: 48px;
+}
+.advantages__center-block {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.right {
+	text-align: right;
+}
+/*advantages block styles end*/
+
+/*stripe 2 block styles start*/
+.stripe-2 {
+    border: 5px solid #d5d5d5;
+    padding-top: 46px;
+    padding-bottom: 20px;
+}
+.stripe-2 .main-banner__form-title {
+	text-align: center;
+}
+.stripe-2 form {
+	display: flex;
+	justify-content: space-around;
+	align-items: flex-end;	
+}
+.stripe-2 form>* {
+    max-width: 30%;
+}
+.stripe-2 .form-group {
+	position: relative;
+	margin: 0;
+}
+.stripe-2 input {
+	margin: 0;
+}
+.stripe-2 input{
+	margin-top: 7px;
+	height: 48px;
+	width: 100%;
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.09);
+	border: 1px solid rgba(213, 213, 213, 0.77);
+	background-color: #f4f4f4;
+	padding-left: 47px;
+}
+.stripe-2 input::placeholder{
+	color: #9d9d9d;
+	font-family: "Museo Sans Cyrl 500";
+	font-size: 13px;
+	line-height: 20px;
+}
+.stripe-2 label{
+	position: absolute;
+    top: 23px;
+    left: 18px;
+}
+.stripe-2__bottom-text {
+	display: flex;
+	justify-content: center;
+	align-items: baseline;
+	margin-top: 27px;
+}
+.stripe-2__bottom-text span {
+	margin-left: 15px;
+}
+/*stripe 2 block styles end*/
+
+/*our bordures block styles start*/
+.our-bordures {
+	background: url(../img/transparent-2.png) no-repeat;
+	background-size: 100% 100%;
+}
+.our-bordures__block {
+	display: flex;
+	flex-direction: column;
+}
+.our-bordures__info-block {
+	background: #ffffff;
+	padding: 35px 40px;
+}
+.our-bordures .block-title__text {
+	color: #ffffff;
+}
+.our-bordures__row {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+.our-bordures__row + .our-bordures__row {
+	margin-top: 24px;
+}
+.our-bordures__title {
+    box-shadow: 0 0 10px rgba(156, 156, 156, 0.3);
+    background-color: #f8f8f8;
+    padding: 32px 0 21px 40px;
+}
+.our-bordures__title span{
+	color: #000000;
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 18px;
+	text-transform: uppercase;	
+}
+.our-bordures__info {
+    padding-left: 13px;
+}
+.our-bordures__info ul li {
+	font-size: 13px;
+	line-height: 18px;
+	position: relative;
+}
+.our-bordures__info ul li:before {
+    content: '•';
+    font-size: 16px;
+    position: absolute;
+    left: -13px;
+    color: #14662d;
+}
+.our-bordures__info-title {
+	color: #000000;
+	font-size: 14px;
+	font-family: "Museo Sans Cyrl 900";
+	line-height: 35px;
+}
+.our-bordures__img {
+	margin-right: 30px;
+}
+.our-bordures__characteristics div span:first-child {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 300";
+	font-size: 14px;
+	line-height: 35px;
+}
+.our-bordures__characteristics div span:last-child {
+	font-family: "Museo Sans Cyrl 900";
+}
+.our-bordures__price-block {
+    width: 50%;
+}
+.our-bordures__characteristics {
+	width: 42%;
+}
+.our-bordures__characteristics div {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.our-bordures__price-block {
+	display: flex;
+	flex-direction: column;
+}
+.our-bordures__price-block .price-title {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 900";
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 35px;
+}
+.our-bordures__price-block .price-strike {
+	color: #8b8b8b;
+	font-family: "Museo Sans Cyrl 300";
+	line-height: 28px;
+	text-decoration: line-through;
+}
+.our-bordures__price-block .price {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 900";
+	font-size: 23px;
+	line-height: 27px;
+}
+.our-bordures__price-block .btn {
+	margin-top: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.our-bordures__price-block .btn .icon-shopping-cart-icon {
+	margin-right: 15px;
+}
+.our-bordures__price-block .btn:hover .icon-shopping-cart-icon {
+	background-position: -165px -137px;
+}
+.our-bordures .flex-block + .flex-block {
+	margin-top: 50px;
+}
+.our-bordures__bottom {
+    padding-top: 68px;
+    padding-bottom: 84px;
+}
+.our-bordures__bottom .header-top__prices * {
+	color: #ffffff;
+}
+/*our bordures block styles end*/
+
+/*our projects block styles start*/
+.our-projects .flex-block {
+    padding-bottom: 96px;
+}
+.our-projects .stripe__background-white {
+	background: url(../img/transparent-6.png) no-repeat;
+}
+.our-projects .our-projects__block + .our-projects__block {
+	margin-top: 27px;
+}
+.our-projects__block {
+	position: relative;
+}
+.our-projects__text {
+	display: none;
+    position: absolute;
+    height: 98%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 6px 9px;
+}
+.our-projects__block:hover .our-projects__text {
+    display: block;
+}
+.our-projects__text-block {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+    padding: 6px 9px;
+    border: 1px solid hsla(0,0%,100%,.6);
+}
+.our-projects__text span:first-child {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 12px;
+	text-transform: uppercase;
+}
+.our-projects img {
+    max-width: 100%;
+    height: 100%;
+}
+.our-projects__text span:last-child {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 300";
+	font-size: 12px;
+	line-height: 20px;
+}
+.our-projects select {
+    height: 48px;
+    width: 100%;
+    padding: 0 21px;
+    color: #9d9d9d;
+    box-shadow: inset 0 0 3px rgba(0,0,0,.09);
+    border: 1px solid hsla(0,0%,84%,.77);
+    -webkit-appearance: none;
+    background: #f4f4f4 url(../img/arrow-down-icon.png) no-repeat 96%;
+    line-height: 1em;
+    text-indent: .01px;
+    text-overflow: "";
+    appearance: none!important;
+}
+.our-projects select::-ms-expand {
+    display: none;
+}
+.our-projects .main-banner__form {
+	width: 100%;
+}
+.our-projects__form-part {
+	
+}
+.our-projects__form-part > a {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 500";
+	font-size: 12px;
+	line-height: 20px;
+	display: flex;
+	justify-content: flex-end;
+}
+.our-projects__form-part a span {
+	display: flex;
+	align-items: center;
+}
+.our-projects__form-part span span {
+	display: inline-block;
+	margin-right: 7px;
+}
+.our-projects__form-part hr {
+	height: 1px;
+	background-color: #d5d5d5;
+	opacity: 0.61;
+}
+.our-projects__callback {
+	color: #000000;
+	font-family: "Museo Sans Cyrl 300";
+	font-size: 13px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding-left: 21px;
+	border-left: 8px solid #14662d;
+}
+.our-projects__callback .callback-bold {
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 14px;
+}
+.our-projects__callback .callback-green a {
+	color: #14662d;
+	font-family: "Museo Sans Cyrl 700";
+	text-decoration: underline;
+}
+.our-projects__callback,
+.our-projects__callback span + span {
+	margin-top: 15px;
+}
+/*our projects block styles end*/
+
+/*articles block styles start*/
+.articles {
+	background: url(../img/transparent-3.png) no-repeat;
+	background-size: 100% 100%;
+}
+.articles__block span {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 16px;
+	display: inline-block;
+    margin-top: 34px;
+}
+.articles__block p {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 300";
+	font-size: 14px;
+    margin-top: 20px;
+}
+.articles__block .btn {
+	width: 50%;
+	margin-top: 30px;
+}
+.articles .flex-block {
+	margin: 77px 0;
+}
+/*articles block styles end*/
+
+/*faq block styles start*/
+.faq {
+	position: relative;
+}
+.faq .flex-block + .flex-block {
+	margin-top: 80px;
+}
+.faq .flex-block:last-child {
+	margin-bottom: 135px;
+}
+.faq .avatar {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 900";
+	font-size: 24px;
+	text-transform: uppercase;
+	width: 51px;
+	height: 51px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.faq__question .avatar {	
+	background-color: #e83838;
+}
+.faq__answer .avatar {	
+	background-color: #14662d;
+}
+.faq__block .faq__question,
+.faq__block .faq__answer {
+	display: flex;
+	justify-content: space-between;
+}
+.faq__block .faq__question {
+	align-items: center;	
+}
+.faq__block .faq__answer {
+	align-items: flex-start;
+	margin-top: 16px;
+}
+.faq__text {
+    max-width: 85%;
+}
+.faq__question .faq__text span {
+    color: #000000;
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 16px;
+}
+.faq__answer .faq__text {
+    background-color: #efefef;
+    padding: 20px 32px;
+}
+.faq .faq__background {
+    width: 100%;
+    height: 555px;
+    background: url(../img/transparent-4.png) no-repeat;
+    background-size: contain;
+    background-position-y: 100px;
+    position: absolute;
+    z-index: -1;
+    bottom: 0;
+}
+/*faq block styles end*/
+
+/*stripe-3 block styles start*/
+.stripe-3 {
+
+}
+.bold-text {
+	font-family: "Museo Sans Cyrl 900";
+}
+.stripe-3 {
+    background: url(../img/stripe-2.png) no-repeat;
+    background-size: auto 130%;
+    background-position-y: -40px;
+}
+/*stripe-3 block styles end*/
+
+/*stripe-4 block styles start*/
+.stripe-4 {
+	background: url(../img/stripe-3.png) no-repeat;
+    background-size: cover;
+    background-position-y: -390px;
+}
+.stripe-4 p {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 14px;
+}
+/*stripe-4 block styles end*/
+
+/*map styles start*/
+.map iframe {
+    height: 341px;
+    width: 100%;
+}
+/*map styles end*/
+
 /* MAIN STYLES END */
+
+
+/* FOOTER STYLES START */
+.footer {
+	background: url(../img/stripe-4.png) no-repeat;
+    background-size: cover;
+    background-position-y: -170px;
+    position: relative;
+}
+.contact-info__block {
+	background: url(../img/transparent-5.png) no-repeat;
+    background-size: cover;
+    padding: 57px 57px 28px 57px;
+    margin-bottom: 150px;
+    text-align: left;
+}
+.contact-info__block .bold-text {
+	font-family: "Museo Sans Cyrl 700";
+}
+.contact-info__title {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 700";
+	font-size: 16px;
+	line-height: 20px;
+	text-transform: uppercase;
+}
+.footer hr {
+	width: 30px;
+	height: 6px;
+	background-color: #ffffff;
+}
+.contact-info__address,
+.contact-info__phone {
+	color: #ffffff;
+	font-family: "Museo Sans Cyrl 300";
+	font-size: 14px;
+	line-height: 20px;
+}
+/* FOOTER STYLES END */
